--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "nbformat>=5.10.4",
+    "plotly>=6.5.2",
+]
