Rename package to python-entsoe, add tests, scripts, and PyPI metadata
- Rename src/library → src/entsoe (import as `from entsoe import Client`)
- PyPI package name: python-entsoe with classifiers, license, keywords
- Add scripts/generate_notebooks.py for reproducible notebook generation
- Add tests/ with 37 integration tests covering all endpoints + validation
- Fix ZIP response handling for balancing endpoints
- Fix imbalance_Price.amount XML parsing
- Fix data availability: DE→DE_LU for prices, FR→ES for NTC
- Harden .gitignore for GitHub distribution
- Re-execute all 5 example notebooks with outputs
- Add docs/data-availability.md documenting known API gotchas

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,38 @@
-# Python-generated files
+# Python
 __pycache__/
-*.py[oc]
+*.py[cod]
+*.so
+*.egg
+*.egg-info/
 build/
 dist/
 wheels/
-*.egg-info
+*.whl
 
 # Virtual environments
-.venv
+.venv/
 
 # Secrets
 .env
 
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
 # Claude
 .claude/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# OS
+.DS_Store
+Thumbs.db
