Devcontainer, price categories, project config updates
- Add .devcontainer for GitHub Codespaces (Python 3.13 + uv)
- Expand price category mapping: rename IMBALANCE_PRICE_CATEGORIES → PRICE_CATEGORIES,
  align A04/A05 with entsoe-py convention (Long/Short), add A06/A07
- Rename column imbalance_price_category → price_category across codebase
- Add reserve_type column (FCR/aFRR/mFRR) to balancing output DataFrames
- Lower requires-python from >=3.13 to >=3.10
- Move scripts/ to examples/generators/ and gitignore it
- Add output/ to gitignore
- Update docs, tests, and example notebooks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 authors = [
     { name = "jsulopzs", email = "jesus.lopez@datons.com" },
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 keywords = ["entsoe", "energy", "electricity", "api", "transparency"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -41,4 +41,5 @@ dev = [
     "nbformat>=5.10.4",
     "plotly>=6.5.2",
     "pytest>=9.0.2",
+    "python-dotenv>=1.2.1",
 ]
