--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "python-entsoe"
-version = "0.3.0"
+version = "0.3.1"
 description = "Python client for the ENTSO-E Transparency Platform API"
 readme = "README.md"
 license = "MIT"
@@ -38,6 +38,7 @@ testpaths = ["tests"]
 [dependency-groups]
 dev = [
     "jupyter>=1.1.1",
+    "kaleido>=1.2.0",
     "nbformat>=5.10.4",
     "plotly>=6.5.2",
     "pytest>=9.0.2",
