--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,22 @@
 [project]
 name = "python-entsoe"
-version = "0.3.0"
+version = "0.4.0"
 description = "Python client for the ENTSO-E Transparency Platform API"
 readme = "README.md"
 license = "MIT"
 authors = [
     { name = "jsulopzs", email = "jesus.lopez@datons.com" },
 ]
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 keywords = ["entsoe", "energy", "electricity", "api", "transparency"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering",
 ]
