--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,22 +2,27 @@ name: Publish to PyPI
 
 on:
   push:
-    tags: ["v*"]
+    branches: [main]
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-    environment: pypi
     permissions:
-      id-token: write  # Required for OIDC trusted publishing
-
+      id-token: write # Required for trusted publishing
     steps:
       - uses: actions/checkout@v4
 
-      - uses: astral-sh/setup-uv@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install build tools
+        run: pip install build
 
       - name: Build package
-        run: uv build
+        run: python -m build
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          skip-existing: true
