--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,12 @@ classifiers = [
 dependencies = [
     "pandas>=2.0",
     "requests>=2.28",
+    "typer>=0.9",
+    "rich>=13.0",
 ]
+
+[project.scripts]
+entsoe = "entsoe.cli:app"
 
 [project.urls]
 Repository = "https://github.com/datons/python-entsoe"
