--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "python-entsoe"
-version = "0.4.1"
+version = "0.4.2"
 description = "Python client for the ENTSO-E Transparency Platform API"
 readme = "README.md"
 license = "MIT"
@@ -25,6 +25,7 @@ dependencies = [
     "requests>=2.28",
     "typer>=0.9",
     "rich>=13.0",
+    "pyarrow>=23.0.1",
 ]
 
 [project.scripts]
